@@ -1,6 +1,8 @@
 
 HEAD
 ====
+Fixes:
+- xt_ECHO: fix kernel warning about RTAX_HOPLIMIT being used
 
 
 v1.39 (2011-09-21)
